added link to code

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h3>18℃</h3>
         <h3>Overcast</h3>
       </div>
-
+<span><a href="https://github.com/StefanieHoeij/Final-Project" >Open-source code</a> by Stefanie Hoeijmans</span>
       <h2 class="subheader">5 Day forcast</h2>
 
       <div class="card mb-3" style="max-width: 540px">
