--- a/index.html
+++ b/index.html
@@ -44,20 +44,28 @@
           </form>
         </div>
         <div class="col-6">
-          <button class="location">Use current location</button>
+          <button class="btn btn-primary location">Use current location</button>
         </div>
       </div>
 
       <div class="card head">
-        <h1 id="city-name">Some city</h1>
         <h3 id="current">Monday, 13:00</h3>
-        <h3 class="current-temp">18℃</h3>
-        <h3 class="weather-description">Overcast</h3>
+        <h1 id="city-name">Some city</h1>
+        <div class="row">
+          <div class="col-6">
+            <h3 class="weather" id="current-temp">18℃</h3>
+            <h3 class="weather" id="weather-description">Overcast</h3>
+          </div>
+          <div class="col-6">
+            <h3 class="weather">Precipitation</h3>
+            <h3 class="weather">Wind speed</h3>
+          </div>
+        </div>
       </div>
 
       <h2 class="subheader">5 Day forcast</h2>
 
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 540px">
         <div class="row g-0">
           <div class="col-md-5">
             <img src="images/rain.jpg" alt="rainy" class="card-img" />
@@ -72,7 +80,7 @@
         </div>
       </div>
 
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 540px">
         <div class="row g-0">
           <div class="col-md-5">
             <img src="images/sunny.jpg" alt="sunny" class="card-img" />
@@ -94,7 +102,7 @@
         </div>
       </div>
 
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 540px">
         <div class="row g-0">
           <div class="col-md-5">
             <img src="images/sunny.jpg" alt="sunny" class="card-img" />
@@ -116,7 +124,7 @@
         </div>
       </div>
 
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 540px">
         <div class="row g-0">
           <div class="col-md-5">
             <img src="images/dark-clouds.jpg" alt="sunny" class="card-img" />
@@ -138,7 +146,7 @@
         </div>
       </div>
 
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 540px">
         <div class="row g-0">
           <div class="col-md-5">
             <img src="images/rain.jpg" alt="sunny" class="card-img" />
