--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
             <h3 class="weather" id="weather-description">Overcast</h3>
           </div>
           <div class="col-6">
-            <h3 class="weather">Precipitation</h3>
-            <h3 class="weather">Wind speed</h3>
+            <h3 class="weather">
+              Humidity: <span id="current-humidity">0</span>%
+            </h3>
+            <h3 class="weather">
+              Wind: <span id="current-speed">speed</span> km/h
+            </h3>
           </div>
         </div>
       </div>
