added weather icon

--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
 
       <div class="card head">
         <h3 id="current">Monday, 13:00</h3>
-        <h1 id="city-name">Some city</h1>
+        <h1 id="city-name">Deventer</h1>
         <div class="row">
+          <div class="col-3"><img src="" alt="weather icon" id="icon" /></div>
           <div class="col-6">
             <h3 class="weather" id="current-temp">18℃</h3>
             <h3 class="weather" id="weather-description">Overcast</h3>
           </div>
-          <div class="col-6">
+          <div class="col-3">
             <h3 class="weather">
               Humidity: <span id="current-humidity">0</span>%
             </h3>
