--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
         <div class="row">
           <div class="col-3"><img src="" alt="weather icon" id="icon" /></div>
           <div class="col-6">
-            <h3 class="weather" id="current-temp">18℃</h3>
+            <h3 class="weather">
+              <span id="current-temp">18</span>
+              <a href="" class="active" id="c-link">℃</a>|<a href="" id="f-link"
+                >℉</a
+              >
+            </h3>
             <h3 class="weather" id="weather-description">Overcast</h3>
           </div>
           <div class="col-3">
