added link to code

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
           </div>
         </div>
       </div>
+      <a href="https://github.com/StefanieHoeij/Final-Project" target="_blanc">
+        Open-source code</a
+      >
+      by Stefanie Hoeijmans
 
       <h2 class="subheader">5 Day forcast</h2>
 
