Added HTML forecast to JS

--- a/index.html
+++ b/index.html
@@ -66,48 +66,7 @@
           <h4>Wind: <span id="current-speed">speed</span> km/h</h4>
         </div>
       </div>
-
-      <div class="row weather-forecast">
-        <div class="col-4 forecast-tomorrow">
-          <div class="card-body">
-            <h5 class="card-title">Tomorrow</h5>
-            <div class="card-text">16℃</div>
-            <div class="card-text">Rainy</div>
-          </div>
-        </div>
-
-        <div class="col-2">
-          <div class="card-body">
-            <h5 class="card-title">Tue</h5>
-            <div class="card-text">21℃</div>
-            <div class="card-text">Sunny</div>
-          </div>
-        </div>
-
-        <div class="col-2">
-          <div class="card-body">
-            <h5 class="card-title">Wed</h5>
-            <div class="card-text">21℃</div>
-            <div class="card-text">Sunny</div>
-          </div>
-        </div>
-
-        <div class="col-2">
-          <div class="card-body">
-            <h5 class="card-title">Thu</h5>
-            <div class="card-text">21℃</div>
-            <div class="card-text">Sunny</div>
-          </div>
-        </div>
-
-        <div class="col-2">
-          <div class="card-body">
-            <h5 class="card-title">Fri</h5>
-            <div class="card-text">21℃</div>
-            <div class="card-text">Sunny</div>
-          </div>
-        </div>
-      </div>
+      <div id="forecast"></div>
     </div>
     <a href="https://github.com/StefanieHoeij/Final-Project" target="_blanc">
       Open-source code</a
